--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=1PG5BXBzg3B_ZejK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
 <html lang="pt-BR">
 
 <head>
@@ -12,11 +7,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Guiminamflix</title>
+    <title>MatheusFlix</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>MATHEUSFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
